@@ -1,0 +1,6 @@
+[Desktop Entry]
+_Name=Look and Feel
+_Comment=Settings controlling the desktop appearance and behavior
+Icon=preferences-desktop
+Type=Directory
+Encoding=UTF-8
