@@ -1,0 +1,6 @@
+[Desktop Entry]
+_Name=Personal
+_Comment=Personal settings
+Icon=user-info
+Type=Directory
+Encoding=UTF-8
