@@ -1,3 +1,9 @@
+2007-01-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* desktop-directories/*.directory.in: added missing files.
+
+	* layout/preferences.menu: fixed typo.
+
 2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* desktop-directories/InternetAndNetwork.directory.in:
